--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,3 +1,7 @@
 ---
 title: Accueil
 ---
+
+<div id="page" class="page_hexagon" data-experience="hexagon">
+  <canvas id="canvas" width="300" height="300"></canvas>
+</div>
