--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -1,5 +1,5 @@
 <!doctype html>
-<html ng-app="angular-app" ng-controller="AppController">
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <base href="<%= config[:root_uri] %>">
