fix galerie pixi js

--- a/source/galerie-canvas.html.erb
+++ b/source/galerie-canvas.html.erb
@@ -1,5 +1,5 @@
 ---
-title: Galerie Canvas
+title: Galerie Canvas Experiment
 ---
 
 <div id="page" class="page_hexagon page_galerie" data-experience="galerie-canvas">
