--- a/source/galerie-pixi.html.erb
+++ b/source/galerie-pixi.html.erb
@@ -1,10 +1,9 @@
 ---
-title: Galerie Pixi
+title: Galerie Pixijs Experiment
 ---
 
 <div id="page" class="page_hexagon page_galerie" data-experience="galerie-pixi">
   <canvas id="canvas" width="300" height="300"></canvas>
-  <%= image_tag "distortion/ripple_2.jpg", class: 'page_galerie__distortion js-distortion' %>
   <%= image_tag "distortion/clouds.jpg", class: 'page_galerie__distortion js-clouds' %>
   <ul class="js-images">
     <% (1..20).each do |i| %>
