add background experiment

--- a/source/images-webgl.html.erb
+++ b/source/images-webgl.html.erb
@@ -1,5 +1,5 @@
 ---
-title: Galerie Canvas Experiment
+title: Images webgl Experiment
 ---
 
 <div id="page" class="page_images-webgl" data-experience="images-webgl">
