--- a/source/assets/stylesheets/commons/_global.sass
+++ b/source/assets/stylesheets/commons/_global.sass
@@ -1,8 +1,12 @@
 html,
 body
     height: 100%
+    overflow: hidden
     position: relative
     width: 100%
+
+body
+    overflow: visible
 
 
 img
