add background shader

--- a/source/assets/stylesheets/pages/_background.sass
+++ b/source/assets/stylesheets/pages/_background.sass
@@ -1,3 +1,8 @@
 .page_background
     .section_image
         display: none
+    #canvasNoise
+        left: 0
+        position: absolute
+        top: 0
+        z-index: 10
